# Summer-GDS

./: .gitignore  CLAUDE.md  README.md  SummerGDS.spec  UML类图.puml  build.sh  config.yaml  main.py  main_oop.py  main_pop.py  main_same_radius.py  pyproject.toml  requirements.txt  start_web_gui.sh  start_web_gui.sh.bak  test_polygon2ring.yaml  test_script.py
.claude/: settings.local.json
config/: webgui_client_config.json
discuss/linkage/: 01_需求分析.md  02_技术方案对比.md  03_方案B详细实施计划.md  README.md  stage3-validation-report.md
discuss/multi_shape_support/: 00_需求分析.md  01_技术方案.md  02_实施计划.md  03_代码结构分析.md
discuss/qt/: 01_实施计划.md  02_启动脚本说明.md
docs/: TODO.md  cell.md  circle_support.md  extend_rings_feature.md  fillet_radius_list.md  frame.md  gds.md  index.md  layer.md  main_oop.md  region.md  utils.md  work_log.md
examples/: fillet_radii_list_example.yaml  new.yaml  new2.yaml  rings_width_space_rule.yaml
gds_utils/: __init__.py  cell.py  frame.py  gds.py  layer.py  region.py  utils.py
tests/: __init__.py  config.yaml  test_frame.py  test_gds_export.py  test_gds_utils.py  test_region.py
tests/qt/: stubs.py  test_log_bridge.py  test_qt_launcher.py  test_qt_mainwindow.py  test_server_worker.py
web_gui/: README.md  app.py  example_config.yaml  example_extend_rings.yaml  log_bridge.py  nohup.out  qt_launcher.py  qt_mainwindow.py  requirements.txt  run.py  server_worker.py
web_gui/static/: main.js
web_gui/static/linkage/: core.js  debug-test.js  id-manager.js  override-manager.js  property-path.js  property-resolver.js  (+9 more)
web_gui/templates/: index.html
